package src.models.enums;

public enum DrinkSize {
    SMALL,
    MEDIUM,
    LARGE
}
