@startuml

class Order {
  +List<Sandwich> sandwiches
  +List<Drink> drinks
  +List<Chip> chips
  +calculateSubtotal()
  +generateSummary()
}

class Sandwich {
  -String name
  -BreadType breadType
  -SandwichSize size
  -boolean toasted
  -List<Topping> toppings
}

class Topping {
  -String name
  -boolean isPremium
}

class Drink {
  -DrinkType type
  -DrinkSize size
}

class Chip {
  -ChipType type
}

enum BreadType
enum SandwichSize
enum DrinkType
enum DrinkSize
enum ChipType

Order --> Sandwich
Order --> Drink
Order --> Chip
Sandwich --> Topping
Sandwich --> BreadType
Sandwich --> SandwichSize
Drink --> DrinkType
Drink --> DrinkSize
Chip --> ChipType

@enduml
